src/objects/Fitbit_Activity__c.object
<CustomObject>
    <description>Daily activity feed from Fitbit</description>
    <fields>
        <fullName>Active_Score__c</fullName>
        <label>Active Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Activity_Calories__c</fullName>
        <label>Activity Calories</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Calories_BMR__c</fullName>
        <label>Calories BMR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Calories_Out__c</fullName>
        <label>Calories Out</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Elevation__c</fullName>
        <label>Elevation</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fairly_Active_Minutes__c</fullName>
        <label>Fairly Active Minutes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Floors__c</fullName>
        <label>Floors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lightly_Active_Distance__c</fullName>
        <label>Lightly Active Distance</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lightly_Active_Minutes__c</fullName>
        <label>Lightly Active Minutes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Logged_Activities_Distance__c</fullName>
        <label>Logged Activities Distance</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Marginal_Calories__c</fullName>
        <label>Marginal Calories</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Moderately_Active_Distance__c</fullName>
        <label>Moderately Active Distance</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sedentary_Active_Distance__c</fullName>
        <label>Sedentary Active Distance</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sedentary_Minutes__c</fullName>
        <label>Sedentary Minutes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Steps__c</fullName>
        <label>Steps</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Distance__c</fullName>
        <label>Total Distance</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tracker_Distance__c</fullName>
        <label>Tracker Distance</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Fitbit_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Very_Active_Distance__c</fullName>
        <label>Very Active Distance</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Very_Active_Minutes__c</fullName>
        <label>Very Active Minutes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Fitbit Activity</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FBA-{0000000}</displayFormat>
        <label>Fitbit Activity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fitbit Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>